# escapees

./: .gitignore  main.py  pyproject.toml
coord_funcs/: galcen_cyl.py  radecplxuvw_to_vT.py  xyzuvw.py
data/: clu_params.csv
notebooks/: 2026_04_02.ipynb  2026_06_12.ipynb  check_gal_results_new.ipynb  checking_gal_results.ipynb  checking_results copy.ipynb  checking_results.ipynb  checking_results_all.ipynb  checking_results_detail copy.ipynb  checking_results_detail.ipynb  emma_mem.ipynb  error_on_positions.ipynb  make_clu_params.ipynb  making_coord_funcs.ipynb  match_hunt_members_zeropoint.ipynb  remaking_coord_funcs.ipynb  validating_coord_funcs.ipynb
scripts/: checking_results.py  make_spheres.py  make_spheres_angmom.py  make_spheres_angmom_gal.py  make_spheres_cyl.py
src/escapees/: __init__.py
src/escapees/coord_funcs/: __init__.py  uvw_to_vT.py  xyzuvw.py
src/escapees/scripts/: make_spheres.py
