[project]
name = "escapees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "duckdb>=1.5.1",
    "fastparquet>=2026.3.0",
    "jupyter>=1.1.1",
    "marimo>=0.22.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["escapees*"]
