[project]
name = "escapees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "astroquery>=0.4.11",
    "duckdb>=1.5.3",
    "fastparquet>=2026.5.0",
    "gaiadr3-zeropoint>=0.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "tables>=3.11.1",
    "tqdm>=4.68.2",
]
