[project]
name = "escapees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=8.0.0",
    "duckdb>=1.5.3",
    "fastparquet>=2026.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mpl-scatter-density>=0.8",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "tables>=3.11.1",
    "tqdm>=4.68.2",
]
